rtest/tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax10/Test.java
// .result=COMPILE_FAIL
public class Test {
	public interface A {
		static boolean equals(Object o);
	}
}